--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
 <h1>Welcome to my GitHub Site!</h1>
+<p>I am learning html, css and javascript. Also, how to git :)</p>
 <script type="text/javascript" src="myscripts.js"></script>
 </body>
 
