--- a/index.html
+++ b/index.html
@@ -3,14 +3,36 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="nickg902" />
+    <meta "description" content="A simple website about stuff I have learned
+    and stuff I am learning, such as HTML, CSS, JavaScript." />
+
     <title>nickg902's GitHub Site</title>
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" href="styles/style.css" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css">
+    <link rel="shortcut icon" href="images/Maple-Leaf.png" type="image/x-icon">
 </head>
 
 <body>
+  <!-- put navigation menu just below here -->
+  <ul>
+    <li>
+      <a href="index.html">Home</a>
+    </li>
+    <li>
+      <a href="projects.html">Projects</a>
+    </li>
+    <li>
+      <a href="pictures.html">Pictures</a>
+    </li>
+    <li>
+      <a href="social.html">Social</a>
+    </li>
+  </ul>
 <h1>Welcome to my GitHub Site!</h1>
-<p>I am learning html, css and javascript. Also, how to git :)</p>
+<p>My name is Nick. I have been in several roles in IT, from service desk to security architect. One skill I lack is
+  coding. So, this page is dedicated to learning html, css and javascript. Also, git :)</p>
 <script type="text/javascript" src="myscripts.js"></script>
 </body>
 
