--- a/resume.html
+++ b/resume.html
@@ -21,15 +21,15 @@
         <a href="projects.html">Projects</a>
       </li>
       <li>
-        <a href="pictures.html">Pictures</a>
+        <a href="resume.html">Resume</a>
       </li>
       <li>
         <a href="social.html">Social</a>
       </li>
     </ul>
 
-    <h1>Pictures</h1>
+    <h1>Resume</h1>
 
-    <p>My pictures will go here, when I start taking some.</p>
+    <p>This is me.</p>
   </body>
 </html>
