--- a/social.html
+++ b/social.html
@@ -21,7 +21,7 @@
         <a href="projects.html">Projects</a>
       </li>
       <li>
-        <a href="pictures.html">Pictures</a>
+        <a href="resume.html">Resume</a>
       </li>
       <li>
         <a href="social.html">Social</a>
