--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 
 <body>
   <!-- put navigation menu just below here -->
+  <div class="topnav" id="myTopnav">
+  <a href="index.html">Home</a>
+  <a href="projects.html">Projects</a>
+  <a href="resume.html">Resume</a>
+  <a href="social.html">Social</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
+<!--
   <ul>
     <li>
       <a href="index.html">Home</a>
@@ -30,6 +38,7 @@
       <a href="social.html">Social</a>
     </li>
   </ul>
+-->
 <h1>Welcome to my GitHub Site!</h1>
 <p>My name is Nick. I have been in several roles in IT, from service desk to security architect. One skill I lack is
   coding. So, this page is dedicated to learning html, css and javascript. Also, git :)</p>
