--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,14 @@
 
   <body>
     <!-- put navigation menu just below here -->
+    <div class="topnav" id="myTopnav">
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="resume.html">Resume</a>
+    <a href="social.html">Social</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
+    <!--
     <ul>
       <li>
         <a href="index.html">Home</a>
@@ -27,6 +35,7 @@
         <a href="social.html">Social</a>
       </li>
     </ul>
+-->
 
     <h1>My projects</h1>
 
