--- a/resume.html
+++ b/resume.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
+<html lang="en">
+<!-- HEADER -->
+<head>
+    <meta charset="UTF-8" />
+    <!-- TITLE -->
+    <title>nickg902's GitHub Site</title>
+    <!-- META -->
     <meta name="author" content="nickg902" />
     <meta "description" content="A simple website about stuff I have learned
     and stuff I am learning, such as HTML, CSS, JavaScript." />
-    <title>Pictures</title>
+    <!-- CSS LINKS -->
     <link rel="stylesheet" href="styles/style.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css">
+    <!-- ICON LINKS -->
     <link rel="shortcut icon" href="images/Maple-Leaf.png" type="image/x-icon">
-  </head>
+</head>
 
-  <body>
-    <!-- put navigation menu just below here -->
+<body>
+  <header>
+    <h1>Welcome to my GitHub Site!</h1>
+  </header>
+  <!-- navigation menu -->
+  <nav>
     <div class="topnav" id="myTopnav">
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="resume.html">Resume</a>
-    <a href="social.html">Social</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="resume.html">Resume</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
-    <!--
-    <ul>
-      <li>
-        <a href="index.html">Home</a>
-      </li>
-      <li>
-        <a href="projects.html">Projects</a>
-      </li>
-      <li>
-        <a href="resume.html">Resume</a>
-      </li>
-      <li>
-        <a href="social.html">Social</a>
-      </li>
-    </ul>
--->
-    <h1>Resume</h1>
+  </nav>
+  <main>
+   <p>My name is Nick. I have been in several roles in IT, from service desk to security architect. One skill I lack is
+   coding. So, this page is dedicated to learning html, css and javascript. Also, git :)</p>
+  </main>
 
-    <p>This is me.</p>
-  </body>
+  <footer>
+    <p>©Copyright 2017 by nickg. All rights reversed.</p>
+  </footer>
+
+  <script type="text/javascript" src="myscripts.js"></script>
+</body>
+
 </html>
