--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="nickg902" />
     <meta "description" content="A simple website about stuff I have learned
     and stuff I am learning, such as HTML, CSS, JavaScript." />
-    <!-- CSS LINKS -->
+    <!-- LOCAL -->
     <link rel="stylesheet" href="styles/style.css" type="text/css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css">
-    <!-- ICON LINKS -->
     <link rel="shortcut icon" href="images/Maple-Leaf.png" type="image/x-icon">
+    <!-- REMOTE -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css">
 </head>
-
 <body>
   <header>
     <h1>Welcome to my GitHub Site!</h1>
@@ -29,13 +29,19 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
   </nav>
+  <!-- CONTENT -->
   <main>
-   <p>My name is Nick. I have been in several roles in IT, from service desk to security architect. One skill I lack is
-   coding. So, this page is dedicated to learning html, css and javascript. Also, git :)</p>
-  </main>
+   <p>My name is Nick. I have been in several roles in IT, from service desk to security. One skill I am working on is
+   web development. So, this page is dedicated to learning html, css and javascript. Also, git :)</p>
 
+  </main>
+  <!-- FOOTER -->
   <footer>
     <p>©Copyright 2017 by nickg. All rights reversed.</p>
+    <!-- SOCIAL -->
+    <a href="https://github.com/nickg902" target="_blank" class="fa fa-github"></a>
+    <a href="https://twitter.com/nickg902" target="_blank" class="fa fa-twitter"></a>
+    <a href="https://www.linkedin.com/in/nickg902/" target="_blank" class="fa fa-linkedin"></a>
   </footer>
 
   <script type="text/javascript" src="myscripts.js"></script>
