--- a/resume.html
+++ b/resume.html
@@ -9,11 +9,12 @@
     <meta name="author" content="nickg902" />
     <meta "description" content="A simple website about stuff I have learned
     and stuff I am learning, such as HTML, CSS, JavaScript." />
-    <!-- CSS LINKS -->
+    <!-- LOCAL -->
     <link rel="stylesheet" href="styles/style.css" type="text/css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css">
-    <!-- ICON LINKS -->
     <link rel="shortcut icon" href="images/Maple-Leaf.png" type="image/x-icon">
+    <!-- REMOTE -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css">
 </head>
 
 <body>
@@ -30,12 +31,33 @@
     </div>
   </nav>
   <main>
-   <p>My name is Nick. I have been in several roles in IT, from service desk to security architect. One skill I lack is
-   coding. So, this page is dedicated to learning html, css and javascript. Also, git :)</p>
+    <h1>Nick Gyorfi</h1>
+    <h2>Skills</h2>
+   <ul>
+     <li>HTML</li>
+     <li>CSS</li>
+     <li>JavaScript</li>
+     <li>Wordpress</li>
+   </ul>
+   <h2>Work Experience</h2>
+   <h3>Atlantic Security Conference</h3>
+   <p>Design, support and maintain the website for the Atlantic Security Conference.</p>
+   <ul>
+     <li>Wordpress</li>
+   </ul>
+   <h3>Halifax Area Security Klatch</h3>
+   <p>Design, support and maintain the website for the Halifax Area Security Klatch</p>
+   <ul>
+     <li>Wordpress</li>
+   </ul>
   </main>
 
   <footer>
     <p>©Copyright 2017 by nickg. All rights reversed.</p>
+    <!-- SOCIAL -->
+    <a href="https://github.com/nickg902" target="_blank" class="fa fa-github"></a>
+    <a href="https://twitter.com/nickg902" target="_blank" class="fa fa-twitter"></a>
+    <a href="https://www.linkedin.com/in/nickg902/" target="_blank" class="fa fa-linkedin"></a>
   </footer>
 
   <script type="text/javascript" src="myscripts.js"></script>
