--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- TITLE -->
     <title>nickg902's GitHub Site</title>
     <!-- META -->
+    <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="author" content="nickg902" />
     <meta "description" content="A simple website about stuff I have learned
     and stuff I am learning, such as HTML, CSS, JavaScript." />
