--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <!-- TITLE -->
     <title>nickg902's GitHub Site</title>
     <!-- META -->
+    <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="author" content="nickg902" />
     <meta "description" content="A simple website about stuff I have learned
     and stuff I am learning, such as HTML, CSS, JavaScript." />
@@ -31,7 +32,13 @@
     </div>
   </nav>
   <main>
-   <p>Some projects I am working on.</p>
+   <h2>Website Development</h2>
+   <h3>The Halifax Area Security Klatch</h3>
+   <ul>
+     <li>Wordpress</li>
+     <li>Visit: <a href="http://thehask.com" target="_blank">http://thehask.com</a></li>
+   </ul>
+   <img src="images/projects/thehask.png" alt="the hask website">
   </main>
 
   <footer>
