--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
     <!-- TITLE -->
     <title>nickg902's GitHub Site</title>
     <!-- META -->
+    <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="author" content="nickg902" />
     <meta "description" content="A simple website about stuff I have learned
     and stuff I am learning, such as HTML, CSS, JavaScript." />
@@ -33,12 +34,11 @@
   <main>
     <h1>Nick Gyorfi</h1>
     <h2>Skills</h2>
-   <ul>
-     <li>HTML</li>
-     <li>CSS</li>
-     <li>JavaScript</li>
-     <li>Wordpress</li>
-   </ul>
+    <img src="images/icons/html5.png" alt="HTML5 logo">
+    <img src="images/icons/css3.png" alt="CSS3 logo">
+    <img src="images/icons/adobe-photoshop.png" alt="Adobe Photoshop logo">
+    <img src="images/icons/adobe-illustrator.png" alt="Adobe Illustrator logo">
+    <img src="images/icons/wordpress.png" alt="WordPress logo">
    <h2>Work Experience</h2>
    <h3>Atlantic Security Conference</h3>
    <p>Design, support and maintain the website for the Atlantic Security Conference.</p>
