--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 
   </header>
   <!-- navigation menu -->
-    <div id="navbar">
+    <div class="topnav" id="myTopnav">
       <a href="#about">About</a>
       <a href="#portfolio">Portfolio</a>
       <a href="#skills">Skills</a>
       <a href="#experience">Experience</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
   <!-- CONTENT -->
   <main>
